# pan-scm-sdk

./: .env.example  .gitignore  .mkdocs-setup.py  .pre-commit-config.yaml  .windsurfrules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_MODELS.md  CLAUDE_UPDATE_SUMMARY.md  CONTRIBUTING.md  Makefile  PRD.md  PYDANTIC_MODELS_GUIDE.md  README.md  SDK_MODELS_STYLING_GUIDE.md  SDK_MODELS_TEMPLATE.py  SDK_SERVICE_TEMPLATE.py  SDK_STYLING_GUIDE.md  SECURITY.md  TODO.md  WINDSURF_RULES.md  _config.yml  docker-compose.yml  fix_anchors.py  fix_lowercase_anchors.py  junit.xml  mkdocs.yml  mkdocs.yml.new  model_recommendations.md  mypy.ini  pull_request_template.md  pyproject.toml  pytest.ini  ruff_docstring_fixes_summary.md  sdk_service_file_styling.md  update_docs.sh  validator_naming_changes.md  validator_naming_report.md  verify_helpers.py
docker/: Dockerfile
docs/: STYLE_GUIDE.md  index.md
docs-site/: docusaurus.config.ts  package-lock.json  sidebars.ts
examples/: bandwidth_allocations_example.py  bgp_routing_example.py  test_move_security_rule.py
openapi/: config-operations.yaml  config-setup.yaml  deployment-services.yaml  device-settings.yaml  identity-services.yaml  mobile-agent.yaml  network-services.yaml  objects.yaml  security-services.yaml
pan_scm_sdk/: __init__.py  client.py  exceptions.py
review-output/: SUMMARY-2026-03-09.md  issue-001-isort-violations.md  issue-002-ruff-unused-import.md  issue-003-mypy-missing-stubs.md  issue-004-docs-missing-identity-services.md  issue-005-missing-network-factories.md  issue-006-test-errors.md  issue-007-docstring-gaps.md
(+1145 files in other folders)
